@@ -829,6 +829,7 @@ allprojects {
     }
     tasks.withType(Javadoc) {
         options.addBooleanOption('Xdoclint:none', true)
+	jvmArgs += [ '--enable-preview']
     }
     tasks.withType(Test) {
         maxHeapSize = "1024m"
